--- a/three.html
+++ b/three.html
@@ -13,7 +13,7 @@
       <p class="text-big"><b>от конструктора Tilda до вёрстки на HTML и CSS</b></p>
       <p><a class="link-text" href="http://geography1234567.tilda.ws/"><b>Сайт</b></a> о футбольных мячиках был собран в Tilda</p>
         <p><a class="link-text" href="http://geography1234567.tilda.ws/higholploo234"><b>Сайт</b></a> о времепровождение летом был создан в Tilda</p>
-        <p><a class="link-text" href="https://learn.algoritmika.org/lesson?lesson=6179&level=6&task=19291"><b>Сайт</b></a> о семье Самойловых. Вёрстка по макету</p>
+        <p><a class="link-text" href="https://them4tv3y.github.io/fifa/"><b>Сайт</b></a> о семье Самойловых. Вёрстка по макету</p>
       <p><a class="link-text" href="http://geography1234567.tilda.ws/grvjvhtjvhjuhvuhb"><b> Многостраничный сайт</b></a> , сделанный на платформе Tilda. Я считаю, что это мой лучший сайт на Tilda</p>
         <p><a class="link-text" href="https://learn.algoritmika.org/lesson?lesson=6187&level=7&task=21858"><b> Финальный cайт</b></a> ,сделанный на языке HTML</p>
         
